@@ -1,7 +1,9 @@
 1.99.6
 
-- New: xmp_get_property_date() / xmp_set_property_date()
-- Test: refactor a the tests preparation
+- New: API xmp_get_property_date() / xmp_set_property_date() with tests.
+- New: API xmp_{get,set]_property_{float,bool,int32,int64}() with tests.
+- New: API add ACR schema namespaces.
+- Test: refactor a the tests preparation.
 - Test: add a test for multiple initializations.
 - Test: use valgrind is available.
 - Bug: fix configure to allow building on MacOS X. Closes bug #13596
